crates/doodle-core/tests/snapshots/broken_syntax__39_tab_margin_mix.snap
---
source: crates/doodle-core/tests/broken_syntax.rs
expression: "render_diagnostics(&diagnostics, &view)"
---
error[margin-mismatch]: a tab where the closing `"""` margin has a space
  --> 39-tab-margin-mix.doodle:2:1
2 | 	hello
  | ^
